# NAFPack

./: CMakeLists.txt  Makefile  README.md  TODO.md  changelog.md  check.out  docs.md  fpm.toml  makefile  optimization_guide.md
check_fftw/: check_fftw.bat  check_fftw.sh
config/: FlagsConfig.cmake
doc/: index.html  search.html
doc/interface/: fftw_alignment_of.html  fftw_alloc_complex.html  fftw_alloc_real.html  fftw_cleanup.html  fftw_cleanup_threads.html  fftw_cost.html  fftw_destroy_plan.html  fftw_estimate_cost.html  fftw_execute_dft.html  fftw_execute_dft_c2r.html  fftw_execute_dft_r2c.html  fftw_execute_r2r.html  fftw_execute_split_dft.html  fftw_execute_split_dft_c2r.html  fftw_execute_split_dft_r2c.html  fftw_export_wisdom.html  fftw_export_wisdom_to_file.html  fftw_export_wisdom_to_filename.html  fftw_export_wisdom_to_string.html  fftw_flops.html  fftw_forget_wisdom.html  fftw_fprint_plan.html  fftw_free.html  fftw_import_system_wisdom.html  fftw_import_wisdom.html  fftw_import_wisdom_from_file.html  fftw_import_wisdom_from_filename.html  fftw_import_wisdom_from_string.html  fftw_init_threads.html  fftw_make_planner_thread_safe.html  fftw_malloc.html  fftw_plan_dft.html  fftw_plan_dft_1d.html  fftw_plan_dft_2d.html  fftw_plan_dft_3d.html  fftw_plan_dft_c2r.html  fftw_plan_dft_c2r_1d.html  fftw_plan_dft_c2r_2d.html  fftw_plan_dft_c2r_3d.html  fftw_plan_dft_r2c.html  (+100 more)
doc/lists/: files.html  modules.html  procedures.html  types.html
doc/module/: fftw3.html  nafpack_constant.html  nafpack_fft.html  nafpack_linear_algebra.html  nafpack_matricielle.html  nafpack_matrix_decomposition.html  nafpack_meshgrid.html
doc/proc/: cholesky_decomposition.html  cross.html  diagonally_dominant_matrix.html  direct_methode.html  dot.html  eigen.html  fft_1d.html  fft_2d.html  fft_3d.html  identity_n.html  ifft_1d.html  ifft_2d.html  ifft_3d.html  iterative_methods.html  ldu_decomposition.html  lu_decomposition.html  meshgrid.html  norm_2.html  norm_2_complex.html  normalise.html  normalise_complexe.html  qr_decomposition.html
doc/search/: search_database.json
doc/sourcefile/: fftw3.f90.html  (+6 more)
docs/: index.html  modules.json  search.html
fpm_configs/: fpm_linux.toml  fpm_windows.toml
src/: CMakeLists.txt  NAFPack_Logger_mod.f90  NAFPack_config.f90  NAFPack_constant.f90  NAFPack_loop_method.f90
src/Array_creation/: NAFPack_meshgrid.f90  NAFPack_meshgrid_complex_2D.f90  NAFPack_meshgrid_complex_3D.f90  NAFPack_meshgrid_integer_2D.f90  NAFPack_meshgrid_integer_3D.f90  NAFPack_meshgrid_real_2D.f90  NAFPack_meshgrid_real_3D.f90
src/Array_creation/meshgrid/: NAFPack_meshgrid.f90  NAFPack_meshgrid_complex_2D.f90  NAFPack_meshgrid_complex_2D_compute.f90  NAFPack_meshgrid_complex_3D.f90  NAFPack_meshgrid_integer_2D.f90  NAFPack_meshgrid_integer_2D_compute.f90  NAFPack_meshgrid_integer_3D.f90  NAFPack_meshgrid_integer_3D_compute.f90  NAFPack_meshgrid_real_2D.f90  NAFPack_meshgrid_real_2D_compute.f90  NAFPack_meshgrid_real_3D.f90
src/FFT/: BiStFr_fft.f90  FFTW3.f90  NAFPack_fft.f90
src/Fourier_Transform/: NAFPack_Fourier_Transform.f90  NAFPack_Fourier_Transform_dft.f90  NAFPack_Fourier_Transform_dft_compute.f90  NAFPack_Fourier_Transform_fft_compute_mixed_radix.f90
src/Fourier_Transform/dft/: NAFPack_Fourier_Transform_dft.f90  NAFPack_Fourier_Transform_dft2.f90  NAFPack_Fourier_Transform_dft3.f90  NAFPack_Fourier_Transform_dft_compute.f90
src/Fourier_Transform/fft/: NAFPack_Fourier_Transform_fft.f90  NAFPack_Fourier_Transform_fft_compute_radix2.f90
src/algebra/: NAFPack_Direct_methode.f90  NAFPack_Eigen.f90  NAFPack_Iterative_methods.f90  NAFPack_Preconditioners.f90  NAFPack_linear_algebra.f90  NAFPack_linear_system.f90  NAFPack_matricielle.f90  NAFPack_matrix_decomposition.f90
src/io/: NAFPack_ANSI.f90  NAFPack_ANSI_ucs4.f90  NAFPack_Logger_mod.f90  NAFPack_matrix_market.f90  NAFPack_terminal.f90
src/linear_algebra/: NAFPack_Preconditioners.f90  NAFPack_linalg.f90
src/linear_algebra/Direct_method/: NAFPack_Direct_methode.f90  NAFPack_Direct_types.f90
src/linear_algebra/Eigen/: NAFPack_Eigen.f90
src/linear_algebra/Iterative_method/: NAFPack_Iterative_Params.f90  NAFPack_Iterative_methods.f90  NAFPack_Iterative_types.f90  NAFPack_Krylov_method.f90
src/linear_algebra/Matrix/: NAFPack_matricielle.f90  NAFPack_matrix_decomposition.f90  NAFPack_matrix_properties.f90  NAFPack_matrix_tools.f90
src/math_utils/: NAFPack_math_utils.f90
src/memory/: NAFPack_memory_management.f90  NAFPack_memory_management_complex.f90  NAFPack_memory_management_real.f90  NAFPack_memory_monitor.F90  memory.c  memory_monitor.c
test/: CMakeLists.txt  main_test.f90  test_NAFPack_fft.f90  test_NAFPack_linear_algebra.f90
test/Array_creation/: CMakeLists.txt  test_meshgrid_complex_2D.f90  test_meshgrid_complex_3D.f90  test_meshgrid_integer_2D.f90  test_meshgrid_integer_3D.f90  test_meshgrid_real_2D.f90  test_meshgrid_real_3D.f90
test/Array_creation/meshgrid/: CMakeLists.txt  test_meshgrid.f90  test_meshgrid_complex_2D.f90  test_meshgrid_complex_3D.f90  test_meshgrid_integer_2D.f90  test_meshgrid_integer_3D.f90  test_meshgrid_real_2D.f90  test_meshgrid_real_3D.f90
test/FFT/: test_NAFPack_fft.f90
test/Fourier_Transform/: CMakeLists.txt  test_Fourier_Transform_dft.f90  test_Fourier_Transform_dft2_complex.f90  test_Fourier_Transform_dft2_real.f90  test_Fourier_Transform_dft3_complex.f90  test_Fourier_Transform_dft3_real.f90  test_Fourier_Transform_dft_complex.f90  test_Fourier_Transform_dft_real.f90  test_Fourier_Transform_fft_complex.f90
test/memory/memory_management/: CMakeLists.txt  test_realloc.f90  test_realloc_complex_1D.f90  test_realloc_complex_2D.f90  test_realloc_complex_3D.f90  test_realloc_integer_1D.f90  test_realloc_integer_2D.f90  test_realloc_integer_3D.f90  test_realloc_real_1D.f90  test_realloc_real_2D.f90  test_realloc_real_3D.f90
test/test_memory_leak/: run_valgrind_tests.sh  testdrive.supp
test/test_old/: main_test.f90  test_NAFPack_fft.f90  test_NAFPack_linear_algebra.f90
test_old/: module test_Fourier_Transform_dft_cmplx.f90  test_NAFPack_fft.f90
(+502 files in other folders)
